fix: boolean color in dark mode

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@
   --color-null: #800000;
   --color-link: #4169e1;
   --color-number: #a166dc;
-  --color-boolean: darkblue;
+  --color-boolean: #00008b;
   --bg-tag: #c294ef;
   --color-tag: #333333;
   --bg-length: #c6c6c880;
@@ -25,9 +25,9 @@
     --color-border: #6a6a6f;
     --color-key: #ffd700;
     --color-null: red;
-    //--color-link: #0089ff;
     --color-link: #05d505;
     --color-number: #cfa4f9;
+    --color-boolean: #b2b2ff;
     --bg-length: #efeff4;
     --bg-header: #333333;
     --color-header-link: rgba(255, 215, 0, 0.7);
